samples/_failures_safe/1761344287_ec981b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb80ed64.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_eb80ed64.c:189:9: error: expected expression at end of input
  189 |         if (
      |         ^~
./samples/SAFE/__tmp_eb80ed64.c:189:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb80ed64.c:189:9: error: expected declaration or statement at end of input
